# spilite

./: README.md  pyproject.toml  setup.cfg  setup.py
spilite/: spi.py  spilite.py
spilite/cs/: decoders.py  pins.py
src/: spilite.py
src/cs/: decoders.py
